zzz-02-developers/02-tenants/superhero-battle/base/event-statistics/app/event-statistics-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/connects-to: "fights-kafka-bootstrap,apicurio-service,otel-collector"
    app.openshift.io/vcs-ref: main
    app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
  labels:
    app.kubernetes.io/name: event-statistics
    app.kubernetes.io/part-of: event-stats
    app.kubernetes.io/version: java11-latest
    app: event-statistics
    application: event-stats
    system: quarkus-super-heroes
    app.openshift.io/runtime: quarkus
  name: event-statistics
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: event-statistics
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
